<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:padding="5dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/server"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_settings"/>

    </RelativeLayout>


    <EditText
        android:id="@+id/etServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_insert_server_ip"
        android:ems="10"
        android:textColor="@color/black"
        android:inputType="number|numberDecimal"
        android:digits="0123456789." />

    <RelativeLayout
        android:id="@+id/settingsPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <Spinner
            android:id="@+id/lora_sensor_config_selector"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/spinner_background_ab_example"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/lora_gw_selector"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/spinner_background_ab_example"
            android:textSize="20sp"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/lora_gw_config_panel"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="4dp"
            android:background="@drawable/border"
            android:layout_below="@+id/lora_sensor_config_selector">

            <TextView
                android:id="@+id/hint_over_limit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_switch_warning_over_limit"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="spread"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintBottom_toTopOf="@+id/hint_below_limit"
                app:layout_constraintEnd_toStartOf="@+id/toggle_over_limit"
                />

            <TextView
                android:id="@+id/hint_below_limit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/hint_switch_warning_below_limit"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintTop_toBottomOf="@+id/hint_over_limit"
                app:layout_constraintEnd_toStartOf="@+id/toggle_below_limit"
                />

            <ToggleButton
                android:id="@+id/toggle_over_limit"
                android:layout_width="@dimen/settings_toggle_width"
                android:layout_height="@dimen/settings_toggle_height"
                android:background="@drawable/toggle_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hint_over_limit"
                app:layout_constraintBottom_toTopOf="@+id/toggle_below_limit"
                app:layout_constraintEnd_toStartOf="@+id/spinner_over_limit"
                />

            <ToggleButton
                android:id="@+id/toggle_below_limit"
                android:layout_width="@dimen/settings_toggle_width"
                android:layout_height="@dimen/settings_toggle_height"
                android:background="@drawable/toggle_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hint_below_limit"
                app:layout_constraintTop_toBottomOf="@+id/toggle_over_limit"
                app:layout_constraintEnd_toStartOf="@+id/spinner_below_limit"
                />

            <Spinner
                android:id="@+id/spinner_over_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background_ab_example"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toggle_over_limit"
                app:layout_constraintBottom_toTopOf="@+id/spinner_below_limit"
                />

            <Spinner
                android:id="@+id/spinner_below_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background_ab_example"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toggle_below_limit"
                app:layout_constraintTop_toBottomOf="@+id/spinner_over_limit"
                />
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btnOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_background"
        android:text="@string/config"
        android:textColor="@color/white" />
</LinearLayout>